--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,18 @@ requirements:
     - python
     - six
     - sqlalchemy >=1.0
+    - anyjson >=0.3.3
+    - babel >=1.3
+    - arrow >=0.3.4
+    - intervals >=0.7.1
+    - phonenumbers >=5.9.2
+    - passlib >=1.6,< 2.0
+    - colour >=0.0.4
+    - ipaddr  # [py2k]
+    - enum34  # [py<34]
+    - python-dateutil
+    - furl >=0.4.1
+    - cryptography >=0.6
 
 test:
   imports:
@@ -38,12 +50,12 @@ test:
 
 about:
   home: https://github.com/kvesteri/sqlalchemy-utils
-  license: BSD 3-Clause
   license_file: LICENSE
+  license: BSD 3-Clause
   license_family: BSD
   summary: 'Various utility functions for SQLAlchemy.'
   dev_url: https://github.com/kvesteri/sqlalchemy-utils
-  doc_url: https://sqlalchemy-utils.readthedocs.io/en/latest/
+  doc_url: https://sqlalchemy-utils.readthedocs.io
 
 extra:
   recipe-maintainers:
