--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,7 +3,6 @@
 {% set bundle = "tar.gz" %}
 {% set hash_type = "sha256" %}
 {% set hash = "4119204ff302906015516992b7481e5aabeeaa61c7b04329f9113e42c097b855" %}
-{% set build = 0 %}
 
 package:
   name: {{ name|lower }}
@@ -15,9 +14,8 @@ source:
   {{ hash_type }}: {{ hash }}
 
 build:
-  noarch: python
   number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
