--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,10 +15,10 @@ build:
 
 requirements:
   host:
-    - python
+    - python>=3.4
     - pip
   run:
-    - python
+    - python>=3.4
     - six
     - sqlalchemy >=1.0
     # extras
