--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,27 +1,31 @@
-{% set version = "0.37.0" %}
-{% set wheel_url = "https://files.pythonhosted.org/packages/bc/e9/0815b06efd474bd13945c1975c33d3b7fe1200700f394924e75e018e6843/SQLAlchemy_Utils-0.37.0-py2.py3-none-any.whl" %}
+{% set version = "0.37.1" %}
 
 package:
   name: sqlalchemy-utils
   version: {{ version }}
 
+source:
+  url: https://pypi.org/packages/source/S/SQLAlchemy-Utils/SQLAlchemy-Utils-{{ version }}.tar.gz
+  sha256: 716d9d9592258db9651a511d03e6b2553242c2a440855ee3f7d5812bbb55d9eb
+
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install {{ wheel_url }} --no-deps --ignore-installed -vvv
+  script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv
 
 requirements:
   host:
-    - python >=3.4
+    - python
     - pip
   run:
-    - python >=3.4
+    - python
     - six
     - sqlalchemy >=1.0
     # extras
     - anyjson >=0.3.3
     - babel >=1.3
     - arrow >=0.3.4
+    - pendulum >=2.0.5
     - intervals >=0.7.1
     - phonenumbers >=5.9.2
     - passlib >=1.6,<2.0
