--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,8 @@
 {% set version = "0.41.2" %}
 {% set min_sqlalchemy = "1.3" %}
 
+{% set PYTHON = PYTHON | default("$PYTHON") %}
+
 package:
   name: sqlalchemy-utils-split
   version: {{ version }}
@@ -10,26 +12,26 @@ source:
   sha256: bc599c8c3b3319e53ce6c5c3c471120bd325d0071fb6f38a10e924e3d07b9990
 
 build:
-  number: 1
+  number: 2
   noarch: python
 
 requirements:
   host:
     - python {{ python_min }}
-    - pip
   run:
     - python >={{ python_min }}
 
 outputs:
   - name: sqlalchemy-utils-base
     build:
-      number: 1
       noarch: python
-      script: {{ PYTHON }} -m pip install . -vv --no-deps
+      script:
+        - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation --disable-pip-version-check
     requirements:
       host:
         - pip
         - python {{ python_min }}
+        - setuptools
       run:
         - python >={{ python_min }}
         - sqlalchemy >={{ min_sqlalchemy }}
@@ -52,16 +54,11 @@ outputs:
 
   - name: sqlalchemy-utils-arrow
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - arrow >=0.3.4
-        - python >={{ python_min }}
     test:
       imports:
         - sqlalchemy_utils
@@ -79,16 +76,11 @@ outputs:
 
   - name: sqlalchemy-utils-babel
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - babel >=1.3
-        - python >={{ python_min }}
     test:
       imports:
         - sqlalchemy_utils
@@ -106,16 +98,11 @@ outputs:
 
   - name: sqlalchemy-utils-color
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - colour >=0.0.4
-        - python >={{ python_min }}
     test:
       imports:
         - sqlalchemy_utils
@@ -133,16 +120,11 @@ outputs:
 
   - name: sqlalchemy-utils-encrypted
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - cryptography >=0.6
-        - python >={{ python_min }}
     test:
       imports:
         - sqlalchemy_utils
@@ -160,14 +142,9 @@ outputs:
 
   - name: sqlalchemy-utils-intervals
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
-        - python >={{ python_min }}
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - intervals >=0.7.1
     test:
@@ -187,14 +164,9 @@ outputs:
 
   - name: sqlalchemy-utils-password
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
-        - python >={{ python_min }}
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - passlib >=1.6,<2.0
     test:
@@ -214,14 +186,9 @@ outputs:
 
   - name: sqlalchemy-utils-pendulum
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
-        - python >={{ python_min }}
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - pendulum >=2.0.5
     test:
@@ -241,14 +208,9 @@ outputs:
 
   - name: sqlalchemy-utils-phone
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
-        - python >={{ python_min }}
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - phonenumbers >=5.9.2
     test:
@@ -268,14 +230,9 @@ outputs:
 
   - name: sqlalchemy-utils-timezone
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
-        - python >={{ python_min }}
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - python-dateutil
     test:
@@ -295,14 +252,9 @@ outputs:
 
   - name: sqlalchemy-utils-url
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
-        - python >={{ python_min }}
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - furl >=0.4.1
     test:
@@ -322,14 +274,9 @@ outputs:
 
   - name: sqlalchemy-utils
     build:
-      number: 1
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - pip
-        - python {{ python_min }}
       run:
-        - python >={{ python_min }}
         - {{ pin_subpackage("sqlalchemy-utils-base", max_pin="x.x.x") }}
         - {{ pin_subpackage("sqlalchemy-utils-arrow", max_pin="x.x.x") }}
         - {{ pin_subpackage("sqlalchemy-utils-babel", max_pin="x.x.x") }}
